--- a/src/config.json
+++ b/src/config.json
@@ -7,7 +7,7 @@
     { "value": "HKD", "label": "Hong Kong (HKD $)" }
   ],
   "languageList": [
-    { "value": "english", "label": "E" },
+    { "value": "english", "label": "English" },
     { "value": "german", "label": "Deutsch" },
     { "value": "mandarin", "label": "普通话" }
   ],
