--- a/src/config.json
+++ b/src/config.json
@@ -14,7 +14,7 @@
   "social": {
     "facebook": "https://www.facebook.com/MatterDesign/",
     "instagram": "https://www.instagram.com/p/CVwMlChIWmW",
-    "twitter": "https://twitter.com/hellomatter",
+    "twitter": "https://www.youtube.com/channel/UCEOu94Haa--QmltsSawflXg",
     "youtube": "https://www.youtube.com/channel/UCEOu94Haa--QmltsSawflXg"
   },
   "paymentOptions": {
